--- a/source/_patterns/04-pages/homepage.mustache
+++ b/source/_patterns/04-pages/homepage.mustache
@@ -2,22 +2,27 @@
 {{> 03-templates/header}}
 
 
-<section id="content" class=" col-mb-12 col-12 col-dt-9 col-ld-9">  
+<section id="content" class=" col-mb-12 col-9 col-dt-9 col-ld-9">  
 {{> 02-organisms/slider}}
 </section>
 
-<aside class=" col-mb-3 col-3 col-dt-3 col-ld-3">
+<div class="aside-head col-mb-12 col-3 col-dt-3 col-ld-3 " >
 {{> 03-templates/aside}}
-</aside>
+</div>
 
-<div class="clearfix"></div>
 
-<main>
 
-<h2>Most popular products</h2>
+<section style="clear:both">
 
-{{< 03-templates/new-products}}
-</main>
+{{> 03-templates/features}}
+  
+</section>
 
 
 </div>
+
+
+<footer>
+{{> 03-templates/footer}}
+
+</footer>
