--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,13 +5,15 @@
 @screenTablet: 	768px;
 @screenDesktop: 992px;
 @screenLarge:   1200px;
+@headerColor : #0066a1;
 
 
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700);
 @import "reset";
 @import "fluidable";
 @import "00-atoms/general";
+@import "01-molecules/general";
 @import "03-templates/general";
-
+@import "02-organisms/general";
 
 
