--- a/source/_meta/_00-head.mustache
+++ b/source/_meta/_00-head.mustache
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="../../css/source/less/style.css?{{ cacheBuster }}" media="all" />
     <link rel="stylesheet" href="../../css/pattern-scaffolding.css?{{ cacheBuster }}" media="all" />
-    
+    <script src="../../js/main.js" type="text/javascript"></script>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     {{{ patternLabHead }}}
     <!-- End Pattern Lab -->
