--- a/source/less/00-atoms/logo.less
+++ b/source/less/00-atoms/logo.less
@@ -1,18 +1,20 @@
 .logo-box{
 
     max-width: 120px;
-    height: 20px;
     position: absolute;
     top: 2px;
-    left: 30px;
     width: 100%;
-    padding: 2px;
+    left:0px;
+    height: 52px;
+    padding: 0px;
 
  @media (min-width: @screenTablet) {
     height: 110px;
     	background-color: #0f204b;
 background-image: linear-gradient(125deg, #081026, #0f204b 60%, #0066a1);
+padding: 2px;
     }
+
 
 .logo-link{ 
 	background-color: #fff;
@@ -24,6 +26,15 @@ box-shadow: 0 0.5em 2em rgba(0, 0, 0, 0.3);
 border-bottom-right-radius: 22% 30%;
 	padding-top: 30px;
     }
+img{
+  padding:7px; 
+   @media(min-width : @screenTablet){
+padding:0px;
+
+}
+
+}
+
 
 
 }
