--- a/source/less/reset.less
+++ b/source/less/reset.less
@@ -1,6 +1,6 @@
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+ blockquote, pre,
+ abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
@@ -23,6 +23,13 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
+
+
+h1,h2,h3,h4,h5,p,a{
+  padding:0px;
+  margin:0px;
+}
+
 body {
   line-height: 1;
 }
@@ -42,7 +49,7 @@ table {
   border-spacing: 0;
 }
 
-div , section,main{
+div ,main{
   overflow:hidden;
 }
 
