making homepage as default

--- a/source/less/03-templates/footer.less
+++ b/source/less/03-templates/footer.less
@@ -16,7 +16,12 @@ footer{
 
     h2{
      color: #fff;
-         font-size: 1.1em;
+     font-size: 1.1em;
+     text-align:left;
+    @media(min-width:@screenTablet){
+     text-align: center;
+    }
+
     }
    ul> li {
    
